--- a/Examples/BookA.ipynb
+++ b/Examples/BookA.ipynb
@@ -15,12 +15,12 @@
     "### 1. General probability distributions\n",
     "\n",
     "1. Probability mass function\n",
-    "2. [Probability density function](#1.1-Probability-density-functions) **(Done)**\n",
+    "2. [Probability density function](#1.1-Probability-density-functions)\n",
     "\n",
     "### 2. Standard discrete distributions\n",
     "\n",
     "1. Bernoulli distribution\n",
-    "2. Binomial distribution\n",
+    "2. [Binomial distribution](#2.2-Binomial-distribution)\n",
     "3. Discrete uniform distribution\n",
     "4. Geometric distribution\n",
     "5. Poisson distribution\n",
@@ -33,7 +33,7 @@
     "### 4. Bernoulli and Poisson processes\n",
     "\n",
     "1. Bernoulli process\n",
-    "2. Poisson process\n",
+    "2. [Poisson process](#4.2-Poisson-process)\n",
     "\n",
     "### 5. Population quantiles\n",
     "\n",
@@ -57,7 +57,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Probability distributions"
+    "## 1 Probability distributions\n",
+    "\n",
+    "-----"
    ]
   },
   {
@@ -434,43 +436,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2. Probability mass functions"
+    "### 1.2 Probability mass functions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Standard discrete distributions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1. Bernoulli distribution"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2. Binomial distribution"
-   ]
-  },
-  {
-   "source": [
-    "#### 2.2.1\n",
+    "## 2 Standard discrete distributions\n",
     "\n",
-    "Suppose that a dicrete random variable $X$ is distributed $X \\sim B(15, 0.25)$.\n",
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.1 Binomial distribution"
+   ]
+  },
+  {
+   "source": [
+    "**Example 2.1.1.** Suppose that a dicrete random variable $X$ is distributed $X \\sim B(15, 0.25)$.\n",
     "\n",
     "Calculate\n",
     "\n",
-    "1. $P(X = 5)$\n",
-    "2. $P(X \\leq 7)$\n",
-    "3. $P(2 \\leq X <9)$\n",
-    "4. $E(X)$\n",
-    "5. $S(X)$\n"
+    "**a.** $P(X = 5)$\n",
+    "\n",
+    "**b.** $P(X \\leq 7)$\n",
+    "\n",
+    "**c.** $P(2 \\leq X <9)$\n",
+    "\n",
+    "**d.** $E(X)$\n",
+    "\n",
+    "**e.** $S(X)$"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -487,7 +486,7 @@
   },
   {
    "source": [
-    "**1.** The $P(X = 5)$ is\n",
+    "**a.** The $P(X = 5)$ is\n",
     "\n",
     "$$\n",
     "p(5) = \\binom{15}{5} (0.25)^{5} (0.75)^{10} = \\cdots\n",
@@ -518,7 +517,7 @@
   },
   {
    "source": [
-    "**2.** The $P(X \\leq 7)$ is\n",
+    "**b.** The $P(X \\leq 7)$ is\n",
     "\n",
     "$$\n",
     "F(7) = \\sum_{k=0}^{7} \\binom{15}{k} (0.25)^{k} (0.75)^{15-k} = \\cdots\n",
@@ -549,12 +548,12 @@
   },
   {
    "source": [
-    "**3.** The $P(2 \\leq X < 9) = F(8) - F(2)$ is\n",
+    "**c.** The $P(2 \\leq X < 9) = F(8) - F(2)$ is\n",
     "\n",
     "$$\n",
     "F(8) - F(2) =\n",
     "\\sum_{i=0}^{8} \\binom{15}{i} (0.25)^{j} (0.75)^{15-i} -\n",
-    "\\sum_{j=0}^{2} \\binom{15}{j} (0.25)^{j} (0.75)^{15-j} -\n",
+    "\\sum_{j=0}^{2} \\binom{15}{j} (0.25)^{j} (0.75)^{15-j}\n",
     " = \\cdots\n",
     "$$"
    ],
@@ -583,7 +582,7 @@
   },
   {
    "source": [
-    "**4.** The expected value of $X$ is\n",
+    "**d.** The expected value of $X$ is\n",
     "\n",
     "$$\n",
     "E(X) = np = 15(0.25) = \\cdots\n",
@@ -614,7 +613,7 @@
   },
   {
    "source": [
-    "**5.5** The standard deviation of $X$ is\n",
+    "**e.** The standard deviation of $X$ is\n",
     "\n",
     "$$\n",
     "S(X) = \\sqrt{np(1-p)} = \\sqrt{15(0.25)(0.75)} = \\cdots\n",
@@ -645,7 +644,7 @@
   },
   {
    "source": [
-    "**Example 2.2.2.**"
+    "**Example 2.1.2.**"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -654,56 +653,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Discrete uniform distribution"
+    "### 2.2 Discrete uniform distribution"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Geometric distribution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5. Poisson distribution"
+    "### 2.3 Geometric distribution"
    ]
   },
   {
@@ -745,54 +702,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Standard continuous distributions"
+    "### 2.4 Poisson distribution"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Continuous uniform distribution"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2. Exponential distribution"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Bernoulli and Poisson processes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1. Bernoulli process"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2. Poisson process"
-   ]
-  },
-  {
-   "source": [
-    "#### 4.2.1 (June 2018)\n",
+    "## 3 Standard continuous distributions\n",
     "\n",
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Continuous uniform distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 Exponential distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4 Bernoulli and Poisson processes\n",
+    "\n",
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1 Bernoulli process"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2 Poisson process"
+   ]
+  },
+  {
+   "source": [
+    "**Example 4.2.1 (June 2018).** \n",
     "The arrival of incoming emails at my office computer during working hours may be modelled by a Poisson process. On average, five emails arrive per hour.\n",
     "\n",
-    "1. Calculate the probability that exactly three emails arrive in an hour.\n",
-    "2. Calculate the probability that fewer than three emails arrive in an hour.\n",
-    "3. Calculate the probability that the interval between two successive incoming emails is less than ten minutes.\n",
-    "4. State the distribution that models of the number of emails arriving between 1.30 p.m. and 4.30 p.m.\n",
+    "Calculate the following probabilities\n",
+    "\n",
+    "**a.** Exactly three emails arrive in an hour.\n",
+    "\n",
+    "**b.** Fewer than three emails arrive in an hour.\n",
+    "\n",
+    "**c.** The interval between two successive incoming emails is less than ten minutes.\n",
+    "\n",
+    "and then\n",
+    "\n",
+    "**d.** State the distribution that models of the number of emails arriving between 1.30 p.m. and 4.30 p.m.\n",
     "\n",
     "State all calculations to 3dp"
    ],
@@ -815,7 +824,7 @@
   },
   {
    "source": [
-    "**1.** The probability exactly three emails will arrive in an hour is\n",
+    "**a.** The probability exactly three emails will arrive in an hour is\n",
     "\n",
     "$$\n",
     "p(3) = e^{-5} \\bigg( \\frac{5^{3}}{3!} \\bigg) = \\cdots\n",
@@ -846,7 +855,7 @@
   },
   {
    "source": [
-    "**2.** The probability fewer than three emails arrive in an hour is $F(2)$, so\n",
+    "**b.** The probability fewer than three emails arrive in an hour is $F(2)$, so\n",
     "\n",
     "$$\n",
     "F(3) = e^{-5} \\sum_{k=0}^{2} \\frac{5^{k}}{k!} = \\cdots\n",
@@ -877,7 +886,7 @@
   },
   {
    "source": [
-    "**3.** Let the continuous random variable $T$ represent the waiting time between emails, where $T \\sim M(3)$.\n",
+    "**c.** Let the continuous random variable $T$ represent the waiting time between emails, where $T \\sim M(3)$.\n",
     "Ten minutes is equivalent to $1/6$ hours, so $P(T < 1/6)$ is\n",
     "\n",
     "$$\n",
@@ -909,7 +918,9 @@
   },
   {
    "source": [
-    "**4.** If $X$ is a random variable that models the number of emails received in 1 hour, where $X \\sim \\text{Poisson}(3)$, then let $Y$ be a random variable that models the number of emails received in t hours, where $Y \\sim \\text{Poisson}(5t)$. If we set $t=3$, then $Y \\sim \\text{Poisson}(15)$."
+    "**d.** If $X$ is a random variable that models the number of emails received in 1 hour, where $X \\sim \\text{Poisson}(3)$, then let $Y$ be a random variable that models the number of emails received in $t$ hours, so $Y \\sim \\text{Poisson}(5t)$.\n",
+    "\n",
+    "If we set $t=3$ (hours), then $Y \\sim \\text{Poisson}(15)$."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -918,21 +929,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Population quantiles"
+    "## 5 Population quantiles\n",
+    "\n",
+    "-----"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Population quantile of a continuous distribution"
+    "### 5.1 Population quantile of a continuous distribution"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Population quantile of a discrete distribution"
+    "### 5.2 Population quantile of a discrete distribution"
    ]
   }
  ],
