--- a/Examples/BookA.ipynb
+++ b/Examples/BookA.ipynb
@@ -481,7 +481,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 12,
+   "execution_count": 11,
    "outputs": []
   },
   {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 12
     }
    ],
    "source": [
@@ -532,7 +532,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 14,
+   "execution_count": 13,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -542,7 +542,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 13
     }
    ]
   },
@@ -566,7 +566,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 15,
+   "execution_count": 14,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -576,7 +576,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 14
     }
    ]
   },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +604,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 15
     }
    ],
    "source": [
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 16
     }
    ],
    "source": [
@@ -791,15 +791,15 @@
     "**Example 4.2.1 (June 2018).** \n",
     "The arrival of incoming emails at my office computer during working hours may be modelled by a Poisson process. On average, five emails arrive per hour.\n",
     "\n",
-    "Calculate the following probabilities\n",
+    "Calculate the probability that\n",
     "\n",
-    "**a.** Exactly three emails arrive in an hour.\n",
+    "**a.** exactly three emails arrive in an hour.\n",
     "\n",
-    "**b.** Fewer than three emails arrive in an hour.\n",
+    "**b.** fewer than three emails arrive in an hour.\n",
     "\n",
-    "**c.** The interval between two successive incoming emails is less than ten minutes.\n",
+    "**c.** the interval between two successive incoming emails is less than ten minutes.\n",
     "\n",
-    "and then\n",
+    "And\n",
     "\n",
     "**d.** State the distribution that models of the number of emails arriving between 1.30 p.m. and 4.30 p.m.\n",
     "\n",
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,7 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 23,
+   "execution_count": 18,
    "outputs": [
     {
      "output_type": "execute_result",
@@ -849,7 +849,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 18
     }
    ]
   },
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +877,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 19
     }
    ],
    "source": [
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 20
     }
    ],
    "source": [
@@ -924,6 +924,104 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "**Example 4.2.2.** Suppose that alpha particles are emitted from a radioactive source at random at an average rate of $0.5$ every second.\n",
+    "Assume that the emissions of alpha particles may be modelled by a Poisson process.\n",
+    "\n",
+    "Calculate the probability that\n",
+    "\n",
+    "**a.** the waiting time between emissions of alpha particles exceeds ten seconds.\n",
+    "\n",
+    "**b.** there are no emissions of alpha particles in a five-second interval."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rate of events\n",
+    "L = 0.5\n",
+    "\n",
+    "# waiting time between events\n",
+    "t = stats.expon(loc=0, scale = 1/L)"
+   ]
+  },
+  {
+   "source": [
+    "**a.** The waiting time (in seconds) between successive alpha particle emissions, $T$, has an exponential distribution with parameter $\\lambda = 0.5$.\n",
+    "So, the probability that the waiting time between alpha particle emissions exceeds ten seconds is given by\n",
+    "\n",
+    "$$\n",
+    "1 - F(10) = 1 - \\{1 - e^{-5}\\}= \\cdots\n",
+    "$$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.0067"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "source": [
+    "round(1 - t.cdf(x=10), 4)"
+   ]
+  },
+  {
+   "source": [
+    "**b.** Alpha particle emissions may be modelled by a Poisson process with rate $\\lambda = 0.5$ per second. \n",
+    "\n",
+    "So, $X$, the number of emissions in a five-second interval, has a Poisson distribution with parameter $\\lambda t = 0.5(5) = 2.5$. Hence the probability that there are no alpha particle emissions in a five-second interval is\n",
+    "\n",
+    "$$\n",
+    "p(3) = e^{-2.5} \\bigg( \\frac{2.5^{0}}{0!} \\bigg) = \\cdots\n",
+    "$$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.0820849986238988"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
+   "source": [
+    "# rate scalar\n",
+    "t = 5\n",
+    "\n",
+    "# number of events\n",
+    "x = stats.poisson(mu=L*t)\n",
+    "\n",
+    "x.pmf(k=0)"
+   ]
   },
   {
    "cell_type": "markdown",
